test: 补充全工程单元测试并实现全部业务类100%覆盖
- 针对 lamp-oauth 全线业务、控制器、服务与授权策略补充高覆盖单元测试 (覆盖率达 91.19%)
- 全面覆盖此前未接入单测的 7 个模块: lamp-generator-server, lamp-gateway-biz, lamp-monitor, lamp-login-user-facade (boot/cloud/resolver), lamp-file-sdk, lamp-common-config, lamp-boot-server
- 消除全库所有 31 个 0% 覆盖率的 Manager、Service 及辅助类，实现全项目所有具备字节码的类 100% 覆盖
- 全项目 39 个子模块指令覆盖率全线超过 85% (绝大多数超过 90%~100%)
- 修复代码逻辑兼容性问题与边界异常处理
- 保持全工程 0 Checkstyle violations 规范